# mirror_gesture

./: .gitignore
calib/: CMakeLists.txt  calib_config.ini  camera_calib.cpp  camera_calib.hpp  fish_eye_calib.cpp  fish_eye_calib.hpp  main.cpp  main_split.cpp  note.txt  pinhole_calib.cpp  pinhole_calib.hpp  split_stereo.cpp  split_stereo.hpp  stereo_split.yaml
capture/: CMakeLists.txt  virtual_capture.cpp  virtual_forcalib.cpp
position/: json_to_ply.py  mediapipe_3ds.py  mediapipe_video.py  utils.py
